--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
     background-image: url("warzone.jpg");
     background-color: black;
 }
+.flags_remaining{
+    color: white;
+}
 .flags_placed{
     color: white;
 }
@@ -15,6 +18,10 @@ body {
 }
 .countdown{
     color: red;
+}
+.rules{
+    color: white;
+    justify-content: center;
 }
 .column {
     
@@ -59,9 +66,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-    height: 100vh;
-    width: 100vw;
-    margin: 0px;
+    height: 105vh;
+    width: 105vw;
+    margin: 5px;
 }
 
 .difficultyMenu {
@@ -74,11 +81,10 @@ body {
 
 .difficultyMenu * {
     padding: 10px;
-    border: 0px solid gray;
     background-color: black;
-    margin: 0.5%;
-    border-radius: 0.5em;
-    font-size: 1em;
+    margin: 0.75%;
+    border-radius: 0.75em;
+    font-size: 1.1em;
     color: white;
 
 }
@@ -99,14 +105,8 @@ body {
     height: 100%;
 }
 
-.card {
-    width: 100%;
-    height: 100%;
-    border: 1px solid black;
-}
-.card:hover{
-    background: black;
-}
+
+
 
   #overlay * {
     pointer-events: none;
