--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Impact;
+    font-family: sans-serif;
     font-size: 20px;
 }
 
@@ -59,6 +59,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: stretch;
+    
 }
 
 .body {
