--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,13 +22,19 @@ body {
 .rules{
     color: white;
     justify-content: center;
+    right:0;
+    top: 0;
+    position: absolute;
 }
 .column {
     
     padding: 10px;
 }
-.left, .right {
+.left{
     width: 40%;
+}
+.right {
+    width: 40%
 }
 .middle {
     width: 100%;
@@ -108,4 +114,32 @@ body {
 }
 
 
-
+#overlay * {
+    pointer-events: none;
+  }
+  
+  #overlay.active {
+    visibility: visible;
+  }
+  
+  #overlay {
+    visibility: hidden;
+    padding: 1em;
+    padding-left: 4em;
+    padding-right: 4em;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    flex-direction: column;
+    color: rgb(255, 255, 255);
+    box-shadow: 0 0 20px black;
+    right: 0;
+    position: absolute;
+  }
+  
+  #overlayin p {
+    text-align: center;
+    font-size: 1em;
+  }
