--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,23 @@
+@media only screen and (max-width: 480px) and (orientation: portrait) {
+    #playing_area {
+        min-width: 100%;
+        max-width: 100%;
+    }
+    
+}
+
+@media only screen and (max-width: 800px) and (orientation: landscape) {
+    #playing_area {
+        max-width: 325px;
+    }
+    
+    .difficultyMenu{
+        font-size: 17px;
+    }
+    
+}
+
+
 * {
     font-family: sans-serif;
     font-size: 20px;
